// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Columns Correctly update references On addition 1`] = `
Object {
  "A1": Object {
    "content": "=D1",
    "evaluated": Object {
      "format": undefined,
      "type": "empty",
      "value": null,
    },
    "format": undefined,
    "style": undefined,
    "value": null,
  },
  "A2": Object {
    "content": "=Sheet1!D1",
    "evaluated": Object {
      "format": undefined,
      "type": "empty",
      "value": null,
    },
    "format": undefined,
    "style": undefined,
    "value": null,
  },
  "A3": Object {
    "content": "=Sheet2!B1",
    "evaluated": Object {
      "format": undefined,
      "type": "empty",
      "value": null,
    },
    "format": undefined,
    "style": undefined,
    "value": null,
  },
  "A5": Object {
    "content": "=SUM(A1:F1)",
    "evaluated": Object {
      "format": undefined,
      "type": "number",
      "value": 0,
    },
    "format": undefined,
    "style": undefined,
    "value": 0,
  },
  "A6": Object {
    "content": "=SUM(E1:F1)",
    "evaluated": Object {
      "format": undefined,
      "type": "number",
      "value": 0,
    },
    "format": undefined,
    "style": undefined,
    "value": 0,
  },
  "A7": Object {
    "content": "=SUM(D1:D2)",
    "evaluated": Object {
      "format": undefined,
      "type": "number",
      "value": 0,
    },
    "format": undefined,
    "style": undefined,
    "value": 0,
  },
  "F1": Object {
    "content": "=A1",
    "evaluated": Object {
      "format": undefined,
      "type": "empty",
      "value": null,
    },
    "format": undefined,
    "style": undefined,
    "value": null,
  },
  "F2": Object {
    "content": "=D1",
    "evaluated": Object {
      "format": undefined,
      "type": "empty",
      "value": null,
    },
    "format": undefined,
    "style": undefined,
    "value": null,
  },
  "F3": Object {
    "content": "=$G1",
    "evaluated": Object {
      "format": undefined,
      "type": "empty",
      "value": null,
    },
    "format": undefined,
    "style": undefined,
    "value": null,
  },
  "F4": Object {
    "content": "=F3",
    "evaluated": Object {
      "format": undefined,
      "type": "empty",
      "value": null,
    },
    "format": undefined,
    "style": undefined,
    "value": null,
  },
}
`;

exports[`Columns Correctly update references On addition 2`] = `
Object {
  "A1": Object {
    "content": "=B1",
    "evaluated": Object {
      "format": undefined,
      "type": "text",
      "value": "Loading...",
    },
    "format": undefined,
    "style": undefined,
    "value": "Loading...",
  },
  "A2": Object {
    "content": "=Sheet1!D1",
    "evaluated": Object {
      "format": undefined,
      "type": "text",
      "value": "Loading...",
    },
    "format": undefined,
    "style": undefined,
    "value": "Loading...",
  },
  "A3": Object {
    "content": "=Sheet2!B1",
    "evaluated": Object {
      "format": undefined,
      "type": "text",
      "value": "Loading...",
    },
    "format": undefined,
    "style": undefined,
    "value": "Loading...",
  },
}
`;

exports[`Columns Correctly update references On deletion 1`] = `
Object {
  "A1": Object {
    "content": "=#REF",
    "evaluated": Object {
      "error": [Error: Invalid reference],
      "type": "error",
      "value": "#REF",
    },
    "format": undefined,
    "style": undefined,
    "value": "#REF",
  },
  "A2": Object {
    "content": "=#REF",
    "evaluated": Object {
      "error": [Error: Invalid reference],
      "type": "error",
      "value": "#REF",
    },
    "format": undefined,
    "style": undefined,
    "value": "#REF",
  },
  "A3": Object {
    "content": "=Sheet2!B1",
    "evaluated": Object {
      "format": undefined,
      "type": "empty",
      "value": null,
    },
    "format": undefined,
    "style": undefined,
    "value": null,
  },
  "A5": Object {
    "content": "=SUM(A1:B1)",
    "evaluated": Object {
      "error": [Error: Invalid reference],
      "type": "error",
      "value": "#REF",
    },
    "format": undefined,
    "style": undefined,
    "value": "#REF",
  },
  "A6": Object {
    "content": "=SUM(B1)",
    "evaluated": Object {
      "error": [Error: Invalid reference],
      "type": "error",
      "value": "#REF",
    },
    "format": undefined,
    "style": undefined,
    "value": "#REF",
  },
  "A7": Object {
    "content": "=SUM(#REF)",
    "evaluated": Object {
      "error": [Error: Invalid reference],
      "type": "error",
      "value": "#REF",
    },
    "format": undefined,
    "style": undefined,
    "value": "#REF",
  },
  "B1": Object {
    "content": "=A1",
    "evaluated": Object {
      "error": [Error: Invalid reference],
      "type": "error",
      "value": "#REF",
    },
    "format": undefined,
    "style": undefined,
    "value": "#REF",
  },
  "B2": Object {
    "content": "=#REF",
    "evaluated": Object {
      "error": [Error: Invalid reference],
      "type": "error",
      "value": "#REF",
    },
    "format": undefined,
    "style": undefined,
    "value": "#REF",
  },
  "B3": Object {
    "content": "=$C1",
    "evaluated": Object {
      "format": undefined,
      "type": "empty",
      "value": null,
    },
    "format": undefined,
    "style": undefined,
    "value": null,
  },
  "B4": Object {
    "content": "=B3",
    "evaluated": Object {
      "format": undefined,
      "type": "empty",
      "value": null,
    },
    "format": undefined,
    "style": undefined,
    "value": null,
  },
}
`;

exports[`Columns Correctly update references On deletion 2`] = `
Object {
  "A1": Object {
    "content": "=B1",
    "evaluated": Object {
      "format": undefined,
      "type": "text",
      "value": "Loading...",
    },
    "format": undefined,
    "style": undefined,
    "value": "Loading...",
  },
  "A2": Object {
    "content": "=#REF",
    "evaluated": Object {
      "format": undefined,
      "type": "text",
      "value": "Loading...",
    },
    "format": undefined,
    "style": undefined,
    "value": "Loading...",
  },
  "A3": Object {
    "content": "=Sheet2!B1",
    "evaluated": Object {
      "format": undefined,
      "type": "text",
      "value": "Loading...",
    },
    "format": undefined,
    "style": undefined,
    "value": "Loading...",
  },
}
`;

exports[`Rows Correctly update references On addition 1`] = `
Object {
  "A1": Object {
    "content": "=A4",
    "evaluated": Object {
      "format": undefined,
      "type": "empty",
      "value": null,
    },
    "format": undefined,
    "style": undefined,
    "value": null,
  },
  "A6": Object {
    "content": "=A1",
    "evaluated": Object {
      "format": undefined,
      "type": "empty",
      "value": null,
    },
    "format": undefined,
    "style": undefined,
    "value": null,
  },
  "B1": Object {
    "content": "=Sheet1!A4",
    "evaluated": Object {
      "format": undefined,
      "type": "empty",
      "value": null,
    },
    "format": undefined,
    "style": undefined,
    "value": null,
  },
  "B6": Object {
    "content": "=B1",
    "evaluated": Object {
      "format": undefined,
      "type": "empty",
      "value": null,
    },
    "format": undefined,
    "style": undefined,
    "value": null,
  },
  "C1": Object {
    "content": "=Sheet2!A2",
    "evaluated": Object {
      "format": undefined,
      "type": "empty",
      "value": null,
    },
    "format": undefined,
    "style": undefined,
    "value": null,
  },
  "C6": Object {
    "content": "=A$7",
    "evaluated": Object {
      "format": undefined,
      "type": "empty",
      "value": null,
    },
    "format": undefined,
    "style": undefined,
    "value": null,
  },
  "D6": Object {
    "content": "=C6",
    "evaluated": Object {
      "format": undefined,
      "type": "empty",
      "value": null,
    },
    "format": undefined,
    "style": undefined,
    "value": null,
  },
  "E1": Object {
    "content": "=SUM(A1:A6)",
    "evaluated": Object {
      "format": undefined,
      "type": "number",
      "value": 0,
    },
    "format": undefined,
    "style": undefined,
    "value": 0,
  },
  "F1": Object {
    "content": "=SUM(A5:A6)",
    "evaluated": Object {
      "format": undefined,
      "type": "number",
      "value": 0,
    },
    "format": undefined,
    "style": undefined,
    "value": 0,
  },
  "G1": Object {
    "content": "=SUM(B4:C4)",
    "evaluated": Object {
      "format": undefined,
      "type": "number",
      "value": 0,
    },
    "format": undefined,
    "style": undefined,
    "value": 0,
  },
}
`;

exports[`Rows Correctly update references On addition 2`] = `
Object {
  "A1": Object {
    "content": "=A2",
    "evaluated": Object {
      "format": undefined,
      "type": "text",
      "value": "Loading...",
    },
    "format": undefined,
    "style": undefined,
    "value": "Loading...",
  },
  "B1": Object {
    "content": "=Sheet1!A4",
    "evaluated": Object {
      "format": undefined,
      "type": "text",
      "value": "Loading...",
    },
    "format": undefined,
    "style": undefined,
    "value": "Loading...",
  },
  "C1": Object {
    "content": "=Sheet2!A2",
    "evaluated": Object {
      "format": undefined,
      "type": "text",
      "value": "Loading...",
    },
    "format": undefined,
    "style": undefined,
    "value": "Loading...",
  },
}
`;

exports[`Rows Correctly update references On deletion 1`] = `
Object {
  "A1": Object {
    "content": "=#REF",
    "evaluated": Object {
      "error": [Error: Invalid reference],
      "type": "error",
      "value": "#REF",
    },
    "format": undefined,
    "style": undefined,
    "value": "#REF",
  },
  "A2": Object {
    "content": "=A1",
    "evaluated": Object {
      "error": [Error: Invalid reference],
      "type": "error",
      "value": "#REF",
    },
    "format": undefined,
    "style": undefined,
    "value": "#REF",
  },
  "B1": Object {
    "content": "=#REF",
    "evaluated": Object {
      "error": [Error: Invalid reference],
      "type": "error",
      "value": "#REF",
    },
    "format": undefined,
    "style": undefined,
    "value": "#REF",
  },
  "B2": Object {
    "content": "=B1",
    "evaluated": Object {
      "error": [Error: Invalid reference],
      "type": "error",
      "value": "#REF",
    },
    "format": undefined,
    "style": undefined,
    "value": "#REF",
  },
  "C1": Object {
    "content": "=Sheet2!A2",
    "evaluated": Object {
      "format": undefined,
      "type": "empty",
      "value": null,
    },
    "format": undefined,
    "style": undefined,
    "value": null,
  },
  "C2": Object {
    "content": "=A$3",
    "evaluated": Object {
      "format": undefined,
      "type": "empty",
      "value": null,
    },
    "format": undefined,
    "style": undefined,
    "value": null,
  },
  "D2": Object {
    "content": "=C2",
    "evaluated": Object {
      "format": undefined,
      "type": "empty",
      "value": null,
    },
    "format": undefined,
    "style": undefined,
    "value": null,
  },
  "E1": Object {
    "content": "=SUM(A1:A2)",
    "evaluated": Object {
      "error": [Error: Invalid reference],
      "type": "error",
      "value": "#REF",
    },
    "format": undefined,
    "style": undefined,
    "value": "#REF",
  },
  "F1": Object {
    "content": "=SUM(A2)",
    "evaluated": Object {
      "error": [Error: Invalid reference],
      "type": "error",
      "value": "#REF",
    },
    "format": undefined,
    "style": undefined,
    "value": "#REF",
  },
  "G1": Object {
    "content": "=SUM(#REF)",
    "evaluated": Object {
      "error": [Error: Invalid reference],
      "type": "error",
      "value": "#REF",
    },
    "format": undefined,
    "style": undefined,
    "value": "#REF",
  },
}
`;

exports[`Rows Correctly update references On deletion 2`] = `
Object {
  "A1": Object {
    "content": "=A2",
    "evaluated": Object {
      "format": undefined,
      "type": "text",
      "value": "Loading...",
    },
    "format": undefined,
    "style": undefined,
    "value": "Loading...",
  },
  "B1": Object {
    "content": "=#REF",
    "evaluated": Object {
      "format": undefined,
      "type": "text",
      "value": "Loading...",
    },
    "format": undefined,
    "style": undefined,
    "value": "Loading...",
  },
  "C1": Object {
    "content": "=Sheet2!A2",
    "evaluated": Object {
      "format": undefined,
      "type": "text",
      "value": "Loading...",
    },
    "format": undefined,
    "style": undefined,
    "value": "Loading...",
  },
}
`;

exports[`Rows Correctly update references delete row on inactive sheet 1`] = `
Object {
  "B2": Object {
    "content": "=Sheet1!A2",
    "evaluated": Object {
      "format": undefined,
      "type": "empty",
      "value": null,
    },
    "format": undefined,
    "style": undefined,
    "value": null,
  },
  "C1": Object {
    "content": "=Sheet2!A1",
    "evaluated": Object {
      "format": undefined,
      "type": "empty",
      "value": null,
    },
    "format": undefined,
    "style": undefined,
    "value": null,
  },
}
`;

exports[`Rows Correctly update references delete row on inactive sheet 2`] = `
Object {
  "A1": Object {
    "content": "=B1",
    "evaluated": Object {
      "format": undefined,
      "type": "empty",
      "value": null,
    },
    "format": undefined,
    "style": undefined,
    "value": null,
  },
  "B1": Object {
    "content": "=Sheet1!A2",
    "evaluated": Object {
      "format": undefined,
      "type": "empty",
      "value": null,
    },
    "format": undefined,
    "style": undefined,
    "value": null,
  },
  "C1": Object {
    "content": "=Sheet2!A1",
    "evaluated": Object {
      "format": undefined,
      "type": "text",
      "value": "Loading...",
    },
    "format": undefined,
    "style": undefined,
    "value": "Loading...",
  },
}
`;
